booking overflow fix

--- a/styles/_main.sass
+++ b/styles/_main.sass
@@ -354,7 +354,7 @@ body
             height: auto
             transition: max-height 0.5s ease
             max-height: 380px
-            overflow: hidden
+            // overflow: hidden
             &.bnovo-target
                 max-height: 600px
 
